backend/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: autopilot-backend
  namespace: autopilot

  labels:
    app: autopilot-backend

spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: autopilot-backend

  template:

    metadata:

      labels:
        app: autopilot-backend

    spec:

      terminationGracePeriodSeconds: 60

      containers:

      - name: backend

        image: 843141572984.dkr.ecr.eu-north-1.amazonaws.com/autopilot-backend:latest

        imagePullPolicy: Always

        ports:

        - containerPort: 8000

        resources:

          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "1000m"
            memory: "1Gi"

        startupProbe:

          httpGet:
            path: /health/
            port: 8000

          failureThreshold: 30
          periodSeconds: 10

        readinessProbe:

          httpGet:
            path: /health/
            port: 8000

          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5

        livenessProbe:

          httpGet:
            path: /health/
            port: 8000

          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5

        lifecycle:

          preStop:

            exec:

              command:

              - sh
              - -c
              - sleep 15

        securityContext:

          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false

      securityContext:

        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
