backend/k8s/celery-beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: celery-beat

  namespace: autopilot

spec:

  replicas: 1

  selector:

    matchLabels:

      app: celery-beat

  template:

    metadata:

      labels:

        app: celery-beat

    spec:

      containers:

      - name: celery-beat

        image: 843141572984.dkr.ecr.eu-north-1.amazonaws.com/autopilot-backend:latest

        imagePullPolicy: Always

        command:

        - celery

        - -A

        - config

        - beat

        - --loglevel=info

        resources:

          requests:

            cpu: "200m"

            memory: "256Mi"

          limits:

            cpu: "500m"

            memory: "512Mi"
