backend/k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: celery-worker

  namespace: autopilot

spec:

  replicas: 2

  selector:

    matchLabels:

      app: celery-worker

  template:

    metadata:

      labels:

        app: celery-worker

    spec:

      containers:

      - name: celery

        image: 843141572984.dkr.ecr.eu-north-1.amazonaws.com/autopilot-backend:latest

        imagePullPolicy: Always

        command:

        - celery

        - -A

        - config

        - worker

        - --loglevel=info

        resources:

          requests:

            cpu: "250m"

            memory: "512Mi"

          limits:

            cpu: "1000m"

            memory: "1Gi"
