backend/k8s/debug-pod.yaml
apiVersion: v1

kind: Pod

metadata:

  name: django-debug

  namespace: autopilot

spec:

  restartPolicy: Never

  containers:

  - name: django-debug

    image: 843141572984.dkr.ecr.eu-north-1.amazonaws.com/autopilot-backend:latest

    imagePullPolicy: Always

    command:

    - sleep

    - "36000"

    stdin: true

    tty: true
