backend/k8s/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-service
  namespace: autopilot

spec:

  selector:
    app: redis

  type: ClusterIP

  ports:

  - name: redis

    port: 6379

    targetPort: 6379
